# hse_mlops

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dag_configs/: factory_dag_example.yaml  test.yaml
dags/: .airflowignore  factory_dag_example.py  parallel_train_example.py  parallel_train_mlflow_example.py  simple_dag_example.py
dags/services/postgres/: connection.py
dags/services/s3/: connection.py
dags/test/: test_minio.py  test_produce_data_to_pg.py
dockerfiles/airflow/: Dockerfile  requirements.txt
dockerfiles/localstack/: Dockerfile
