[tool.poetry]
name = "hse-mlops"
version = "1.0.0"
description = ""
authors = ["DK kachkindmitry@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^0.950"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
apache-airflow = "^2.7.2"
scikit-learn = "^1.3.1"
mlflow = "^2.7.1"
apache-airflow-providers-postgres = "^5.7.0"
apache-airflow-providers-amazon = "^8.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | venv
  | build
  | dist
)/
'''


[tool.isort]
profile = "black"
multi_line_output = 3


[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
pretty = true

[[tool.mypy.overrides]]
module = "*.*"
ignore_missing_imports = true


[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

